chore: deployment stuff

--- a/AzureMon.Api/AzureMon.Api.csproj
+++ b/AzureMon.Api/AzureMon.Api.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <InvariantGlobalization>true</InvariantGlobalization>
+    <InvariantGlobalization>false</InvariantGlobalization>
     <UserSecretsId>ce763153-7fe2-4ecd-9525-237557f8fa0a</UserSecretsId>
   </PropertyGroup>
 
